fix: tooltips shouldn't show on mobile version

--- a/src/components/admin/styles/Tooltip.module.css
+++ b/src/components/admin/styles/Tooltip.module.css
@@ -51,3 +51,9 @@
     justify-content: center;
 }
 
+@media (max-width: 768px) {
+    .tooltipFixed {
+        display: none !important;
+    }
+}
+
